tests/exec/pos/string_concat_three.hsc
fn main() {
  let message = "a" + "b" + "c";
  write(message);
}
