tests/exec/neg/error_exit5.hsc
fn main() {
  write("err5");
  exit(5);
}
